img links fixed

--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -64,13 +64,12 @@ Beim ersten Drucker kann man IMHO nichts wirklich richtig und nichts wirklich fa
 
 Mein Drucker ist in vier Schritten zusammengebaut und perfekt justiert. Nach dem Anschluss kann mit den 10m Test-Filament direkt losgelegt werden. Auf der beigefügten Micro SD Karte sind einige Modell vorhanden, darunter auch das obligatorische [Benchy](https://de.wikipedia.org/wiki/3DBenchy). Das Out-of-the-Box Ergebnis des Druckers ist top und macht Lust auf Mehr. 
 
-![3D Druck Benchy](img/2024-01-23-benchy.jpeg){: width="350" }
+![3D Druck Benchy](../assets/img/2024-01-23-benchy.jpeg)
 
 ### Benchy was? 
 
 Das Benchy ist das "Hallo Welt" des 3D-Drucks. Es hat vereint so ziemlich alles aus dem 3D-Druck, im Prinzip ein Referenzmodell, ein Benchmark. Daher auch der Name. Neues Filament? Benchy drucken, neue Software? Benchy drucken. Am Drucker was geändert? Benchy drucken. Am Ende hat man eine ganze Flotte von Benchys.
 
-![Benchy](img/2024-01-23-benchy.jpeg)
 
 ### Tipps 
 - Am besten die Benchys beschriften (Datum, Einstellungen, Filmanet etc.) - man kann daran gut die Veränderungen erkennen. 
@@ -86,11 +85,11 @@ Prinzipiell gilt: Am 3D-Drucker darf nichts wackeln und/oder lose sein. Das muss
 
 Ganz fieses Problem: Die erste Schicht haftet nicht ordentlich auf dem Druckbett oder es gibt sichtbare Abstände zwischen den Schichten. 
 
-![Under Extrusion](2024-02-12-under-extrusion-example.jpg)
+![Under Extrusion](../assets/img/2024-02-12-under-extrusion-example.jpg)
 
 Das Ganze lässt sich über die FLow Ratio einstellen. In dem Beispiel unten war die Flow Ratio auf 0,98 eingestellt. In OrcaSlicer findet man die Einstellung jeweils für das Filament.
 
-![Flow Ratio in OrcaSlicer](img/2024-02-12-flow-ratio.ong){: width="350" }
+![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png)
 
 ### Lockeres Druckerbett 
 
