--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -14,7 +14,7 @@ description: "Der Ultimative 3D-Druck Guide"
   - [Pros](#pros)
   - [Cons](#cons)
   - [Update (02/24)](#update-0224)
-  - [Links:](#links)
+  - [Links](#links)
   - [Fazit](#fazit)
 - [Quick-Start und Benchy](#quick-start-und-benchy)
   - [Benchy was?](#benchy-was)
@@ -52,7 +52,7 @@ Ein paar erste Eindrücke zum Anycubic Kobra Neo 2:
 - Das Bendienflld mit dem Drehrad ist überflüssig, wird jetzt ales über den Browser erledigt.
 - Der Listenpreis sind 230€, im Angebot habe ich das Gerät für 209€ erhalten. Aktuell kostet es im Angebot 198€. Also selbst beim Angebotspreis kann man etwas falsch machen.
 
-### Links: 
+### Links
 - [Anycubic Kobra Neo 2](https://de.anycubic.com/products/kobra-2-neo)
 - [Anycubic Kobra Neo 2 Wiki](https://wiki.anycubic.com/en/fdm-3d-printer/kobra-2-neo)
 
@@ -64,7 +64,7 @@ Beim ersten Drucker kann man IMHO nichts wirklich richtig und nichts wirklich fa
 
 Mein Drucker ist in vier Schritten zusammengebaut und perfekt justiert. Nach dem Anschluss kann mit den 10m Test-Filament direkt losgelegt werden. Auf der beigefügten Micro SD Karte sind einige Modell vorhanden, darunter auch das obligatorische [Benchy](https://de.wikipedia.org/wiki/3DBenchy). Das Out-of-the-Box Ergebnis des Druckers ist top und macht Lust auf Mehr. 
 
-![3D Druck Benchy](../assets/img/2024-01-23-benchy.jpeg)
+![3D Druck Benchy](../assets/img/2024-01-23-benchy.jpeg){:width="600"}
 
 ### Benchy was? 
 
@@ -72,7 +72,7 @@ Das Benchy ist das "Hallo Welt" des 3D-Drucks. Es hat vereint so ziemlich alles 
 
 
 ### Tipps 
-- Am besten die Benchys beschriften (Datum, Einstellungen, Filmanet etc.) - man kann daran gut die Veränderungen erkennen. 
+- Am besten die Benchys beschriften (Datum, Einstellungen, Filament etc.) - man kann daran gut die Veränderungen erkennen. 
 - Nicht das auf Sd-Karte gelieferte Benchy-File nutzen, mit dem eigenen Slicer erstellen, da gibt es in der Tat Unterschiede.
 
 ## Druckerprobleme 
@@ -85,11 +85,13 @@ Prinzipiell gilt: Am 3D-Drucker darf nichts wackeln und/oder lose sein. Das muss
 
 Ganz fieses Problem: Die erste Schicht haftet nicht ordentlich auf dem Druckbett oder es gibt sichtbare Abstände zwischen den Schichten. 
 
-![Under Extrusion](../assets/img/2024-02-12-under-extrusion-example.jpg)
+![Under Extrusion](../assets/img/2024-02-12-under-extrusion-example.jpg)v
 
-Das Ganze lässt sich über die FLow Ratio einstellen. In dem Beispiel unten war die Flow Ratio auf 0,98 eingestellt. In OrcaSlicer findet man die Einstellung jeweils für das Filament.
+Das Ganze läßt sich über die FLow Ratio einstellen. In dem Beispiel unten war die Flow Ratio auf 0,98 eingestellt. In OrcaSlicer findet man die Einstellung jeweils für das Filament. 
 
 ![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png)
+
+Es gibt hierfür Möglichkeiten der Kalibrierung um den besten Wert (zwischen 0,95 und 1,05 herauszufinden). 
 
 ### Lockeres Druckerbett 
 
