img width fixed

--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -85,11 +85,11 @@ Prinzipiell gilt: Am 3D-Drucker darf nichts wackeln und/oder lose sein. Das muss
 
 Ganz fieses Problem: Die erste Schicht haftet nicht ordentlich auf dem Druckbett oder es gibt sichtbare Abstände zwischen den Schichten. 
 
-![Under Extrusion](../assets/img/2024-02-12-under-extrusion-example.jpg)v
+![Under Extrusion](../assets/img/2024-02-12-under-extrusion-example.jpg){:width="600"}
 
 Das Ganze läßt sich über die FLow Ratio einstellen. In dem Beispiel unten war die Flow Ratio auf 0,98 eingestellt. In OrcaSlicer findet man die Einstellung jeweils für das Filament. 
 
-![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png)
+![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png){:width="600"}
 
 Es gibt hierfür Möglichkeiten der Kalibrierung um den besten Wert (zwischen 0,95 und 1,05 herauszufinden). 
 
