more imprivements, orcaslicer added

--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -8,6 +8,8 @@ description: "Der Ultimative 3D-Druck Guide"
 
 3D-Druck ist eines der [Rabbit Holes](https://de.wikipedia.org/wiki/Rabbit_Hole), an das ich mich bisher nicht heran gewagt hatte. Danke exzellenter Einweisung eines Mitarbeiters, habe ich mich nun durchgerungen, mich auch in dieses Thema einzunerden. Meine Erfahrung sammle ich in meinem "ultimativen" 3D-Druck Guide.
 
+{% capture list_items %}
+
 - [tl;dr](#tldr)
 - [Welcher Drucker](#welcher-drucker)
   - [Mit welchem Drucker soll man anfangen?](#mit-welchem-drucker-soll-man-anfangen)
@@ -18,10 +20,16 @@ description: "Der Ultimative 3D-Druck Guide"
   - [Fazit](#fazit)
 - [Quick-Start und Benchy](#quick-start-und-benchy)
   - [Benchy was?](#benchy-was)
-  - [Tipps](#tipps)
 - [Druckerprobleme](#druckerprobleme)
   - [Under Extrusion](#under-extrusion)
   - [Lockeres Druckerbett](#lockeres-druckerbett)
+- [OrcaSlicer](#orcaslicer)
+  - [Druckbett](#druckbett)
+  - [Links](#links-1)
+
+{% endcapture %}
+{% include elements/list.html title="Table of Contents" type="toc" %}
+
 
 ## Welcher Drucker 
 
@@ -70,10 +78,7 @@ Mein Drucker ist in vier Schritten zusammengebaut und perfekt justiert. Nach dem
 
 Das Benchy ist das "Hallo Welt" des 3D-Drucks. Es hat vereint so ziemlich alles aus dem 3D-Druck, im Prinzip ein Referenzmodell, ein Benchmark. Daher auch der Name. Neues Filament? Benchy drucken, neue Software? Benchy drucken. Am Drucker was geändert? Benchy drucken. Am Ende hat man eine ganze Flotte von Benchys.
 
-
-### Tipps 
-- Am besten die Benchys beschriften (Datum, Einstellungen, Filament etc.) - man kann daran gut die Veränderungen erkennen. 
-- Nicht das auf Sd-Karte gelieferte Benchy-File nutzen, mit dem eigenen Slicer erstellen, da gibt es in der Tat Unterschiede.
+> <p>💡 <strong>Pro Tip</strong><br> Am besten die Benchys beschriften (Datum, Einstellungen, Filament etc.) - man kann daran gut die Veränderungen erkennen und nicht das auf Sd-Karte gelieferte Benchy-File nutzen, mit dem eigenen Slicer erstellen, da gibt es in der Tat Unterschiede.
 
 ## Druckerprobleme 
 
@@ -89,7 +94,7 @@ Ganz fieses Problem: Die erste Schicht haftet nicht ordentlich auf dem Druckbett
 
 Das Ganze läßt sich über die FLow Ratio einstellen. In dem Beispiel unten war die Flow Ratio auf 0,98 eingestellt. In OrcaSlicer findet man die Einstellung jeweils für das Filament. 
 
-![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png){:width="600"}
+![Flow Ratio in OrcaSlicer](../assets/img/2024-02-12-flow-ratio.png)
 
 Es gibt hierfür Möglichkeiten der Kalibrierung um den besten Wert (zwischen 0,95 und 1,05 herauszufinden). 
 
@@ -101,6 +106,24 @@ Bei einem Anycubic Drucker kann es recht einfach nachjustiert werden. Im Video w
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/x74jm17kwzk?si=rrxzQhqXw-lhtGwa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+## OrcaSlicer
 
+### Druckbett 
+
+Das originale Anycubic Druckbett lässt sich recht leicht in OrcSlicer darzustellen.
+
+![Anycubic Druckbett in OrcaSlicer](../assets/img/2024-02-22-orcaslicer-anycubic-druckbett.png){:width="600"}
+
+In OrcaSlicer unter *Printer Settings*, im Reiter *Basic Information*, di *Printable area* auswählen. 
+
+![OrcaSlicer Printer Settings](../assets/img/2024-02-22-orcaslicer-printable-space.png)
+
+Dort unter Model das Model von Acubic auswöhlen. Im Fall des Anycubic Kobra 2 Neo ist es das 220x220  Druckbett. Die STL-Datei `220.stl` ist bei mir dann z.B. unter `C:\Program Files\AnycubicSlicer\resources\profiles\Anycubic` zu finden. 
+
+![orcaSlicer Bed Shape](../assets/img/2024-02-22-orcaslicer-bed-shape.png)
+
+### Links
+- OrcaSlicer: https://github.com/SoftFever/OrcaSlicer
+- OrcaSlicer Discord: https://discord.gg/P4VE9UY9gJ 
 
 
