typos and formatting fixed

--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -8,9 +8,10 @@ description: "Der Ultimative 3D-Druck Guide"
 
 3D-Druck ist eines der [Rabbit Holes](https://de.wikipedia.org/wiki/Rabbit_Hole), an das ich mich bisher nicht heran gewagt hatte. Danke exzellenter Einweisung eines Mitarbeiters, habe ich mich nun durchgerungen, mich auch in dieses Thema einzunerden. Meine Erfahrung sammle ich in meinem "ultimativen" 3D-Druck Guide.
 
-{% capture list_items %}
+## Inhalt
 
 - [tl;dr](#tldr)
+- [Inhalt](#inhalt)
 - [Welcher Drucker](#welcher-drucker)
   - [Mit welchem Drucker soll man anfangen?](#mit-welchem-drucker-soll-man-anfangen)
   - [Pros](#pros)
@@ -26,10 +27,6 @@ description: "Der Ultimative 3D-Druck Guide"
 - [OrcaSlicer](#orcaslicer)
   - [Druckbett](#druckbett)
   - [Links](#links-1)
-
-{% endcapture %}
-{% include elements/list.html title="Table of Contents" type="toc" %}
-
 
 ## Welcher Drucker 
 
@@ -57,7 +54,7 @@ Ein paar erste Eindrücke zum Anycubic Kobra Neo 2:
 
 - Die Sache mit der MicroSD-Karte nervt. Allerdings bin ich inzwischen auf OctoPrint umgestiegen und lade die Dateien über den Browser in den Drucker. Damit hat sich das Problem erübrigt.
 - Mit dem Anycubic Slicer war ich recht schnell am Limit. Inzwischen bin ich auf OrcaSlicer umgestiegen. Hier gibt es quasi unendlich viele Möglichkeiten etwas falsch zu machen. Genau das habe ich gesucht.
-- Das Bendienflld mit dem Drehrad ist überflüssig, wird jetzt ales über den Browser erledigt.
+- Das Bedienfeld mit dem Drehrad ist überflüssig, wird jetzt ales über den Browser erledigt.
 - Der Listenpreis sind 230€, im Angebot habe ich das Gerät für 209€ erhalten. Aktuell kostet es im Angebot 198€. Also selbst beim Angebotspreis kann man etwas falsch machen.
 
 ### Links
@@ -100,7 +97,7 @@ Es gibt hierfür Möglichkeiten der Kalibrierung um den besten Wert (zwischen 0,
 
 ### Lockeres Druckerbett 
 
-Wenn das Druckbett (printing bed) lose ist, muss es nachjustieren werden. Das Druckbett bewegt sich, das heißt es sit auf Rollen gelagert. Wenn diese Rollen Spiel haben wackelt das Ganze. Bei kleineren Drucken fällt dies nicht auf. Bei größeren entstehen auf der einen Seite des Drucks vielleicht "Löcher" zwischen den Schichten, die erste Schicht ist nicht ordentlich auf dem Druckbett und auf der anderen Seite des Modells trifft der Drucker sogar den Druck. In meinem Fall war es nur eine Haaresbreite, das hat gereicht, dass ab einer Bestimmten Druckhöhe der Druck vom Druckbett gerissen wurde.
+Wenn das Druckbett (printing bed) lose ist, muss es nachjustieren werden. Das Druckbett bewegt sich, das heißt es sit auf Rollen gelagert. Wenn diese Rollen Spiel haben wackelt das Ganze. Bei kleineren Drucken fällt dies nicht auf. Bei größeren entstehen auf der einen Seite des Drucks vielleicht "Löcher" zwischen den Schichten, die erste Schicht ist nicht ordentlich auf dem Druckbett und auf der anderen Seite des Modells trifft der Drucker sogar den Druck. In meinem Fall war es nur eine Haaresbreite, das hat gereicht, daß ab einer Bestimmten Druckhöhe der Druck vom Druckbett gerissen wurde.
 
 Bei einem Anycubic Drucker kann es recht einfach nachjustiert werden. Im Video wird gezeigt wie: 
 
@@ -110,7 +107,7 @@ Bei einem Anycubic Drucker kann es recht einfach nachjustiert werden. Im Video w
 
 ### Druckbett 
 
-Das originale Anycubic Druckbett lässt sich recht leicht in OrcSlicer darzustellen.
+Das originale Anycubic Druckbett läßt sich recht leicht in OrcSlicer darzustellen.
 
 ![Anycubic Druckbett in OrcaSlicer](../assets/img/2024-02-22-orcaslicer-anycubic-druckbett.png){:width="600"}
 
@@ -118,7 +115,7 @@ In OrcaSlicer unter *Printer Settings*, im Reiter *Basic Information*, di *Print
 
 ![OrcaSlicer Printer Settings](../assets/img/2024-02-22-orcaslicer-printable-space.png)
 
-Dort unter Model das Model von Acubic auswöhlen. Im Fall des Anycubic Kobra 2 Neo ist es das 220x220  Druckbett. Die STL-Datei `220.stl` ist bei mir dann z.B. unter `C:\Program Files\AnycubicSlicer\resources\profiles\Anycubic` zu finden. 
+Dort unter Model das Model von Anycubic auswählen. Im Fall des Anycubic Kobra 2 Neo ist es das 220x220  Druckbett. Die STL-Datei `220.stl` ist bei mir dann z.B. unter `C:\Program Files\AnycubicSlicer\resources\profiles\Anycubic` zu finden. 
 
 ![orcaSlicer Bed Shape](../assets/img/2024-02-22-orcaslicer-bed-shape.png)
 
