more updates on 3d prints

--- a/_posts/2024-01-23-3d-druck.md
+++ b/_posts/2024-01-23-3d-druck.md
@@ -24,6 +24,7 @@ description: "Der Ultimative 3D-Druck Guide"
 - [Druckerprobleme](#druckerprobleme)
   - [Under Extrusion](#under-extrusion)
   - [Lockeres Druckerbett](#lockeres-druckerbett)
+  - [Druck löst sich vom Druckbett](#druck-löst-sich-vom-druckbett)
 - [OrcaSlicer](#orcaslicer)
   - [Druckbett](#druckbett)
   - [Links](#links-1)
@@ -102,6 +103,28 @@ Wenn das Druckbett (printing bed) lose ist, muss es nachjustieren werden. Das Dr
 Bei einem Anycubic Drucker kann es recht einfach nachjustiert werden. Im Video wird gezeigt wie: 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/x74jm17kwzk?si=rrxzQhqXw-lhtGwa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+### Druck löst sich vom Druckbett 
+
+Löst sich der Druck vom Druckbett, ist in der Regel die Haftung zu gering.
+
+Insbesondere bei schmalen, hohen Drucken kann dies recht schnell passieren.
+
+Ursache: Die oberen Druckschichten kühlen ab und ziehen sich zusammen, dadurch entstehen im Druck Spannungen, die den Druck lösen. Bei passiert dies oft bei dünnen Drucken, sobald die ersten paar gekühlten Schichten aufgetragen werden.  
+
+![Abgelöster Druck aufgrund zu geringe Haftung auf dem Druckbett](../assets/img/2024-02-25-druckbett-haftung.jpg){:width="600"}
+
+Möglichkeiten dem Problem entgegenzuwirken: Die Haftung des Druckbetts zu erhöhen:
+   
+1. PLA und Hautfett scheinen sich nicht sonderlich zu vertragen, daher das Druckbett mit Isopropanol reinigen - und möglichst nicht direkt anfassen. Ich mach das alle paar Drucke.
+2. Temperatur erhöhen, bei mir hat es bei manchen Drucken geholfen, die Temperatur schrittweise (5 ℃), jedoch nicht mehr als 15℃. 
+3. Raft-Layer verwenden: Plastik klebt am besten auf Plastik. Durch die größere Kontaktfläche v
+
+Eine Möglichkeit scheinen noch spezielle Kleber zu sein, der auf das Druckbett aufgetragen wird. Habe ich selbst noch nicht getestet.
+
+Für alle anderen Varianten gilt: 
+
+![{It works on my machine}](../assets/img/it-works-on-my-machine.png){:width="300"}
 
 ## OrcaSlicer
 
